fixed scrollbar width

--- a/public/theme.css
+++ b/public/theme.css
@@ -3496,7 +3496,7 @@ video {
 }
 
 ::-webkit-scrollbar {
-  width: 6px;
+  width: 3px;
   height: 10px;
 }
 
@@ -3505,7 +3505,8 @@ video {
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #6c6868;
+  background-color: #8f8f8f;
+  opacity: 0.5;
   border-radius: 25px;
   cursor: pointer;
 }
