--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,7 +8,7 @@
 }
 
 ::-webkit-scrollbar {
-  width: 6px;
+  width: 3px;
   height: 10px;
 }
 
@@ -17,7 +17,8 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #6c6868;
+  background-color: #8f8f8f;
+  opacity: 0.5;
   border-radius: 25px;
   cursor: pointer;
 }
